migration from cloudflare workers to deno deploy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-	"files.associations": {
-		"wrangler.json": "jsonc"
-	},
-	"typescript.tsdk": "node_modules/typescript/lib"
+  "deno.enablePaths": [
+    "./"
+  ],
+  "editor.inlayHints.enabled": "off",
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  }
 }
