--- a/deno.json
+++ b/deno.json
@@ -3,11 +3,11 @@
     "@ai-sdk/google": "npm:@ai-sdk/google@^1.2.18",
     "@atproto/api": "npm:@atproto/api@^0.15.10",
     "@atproto/lexicon": "npm:@atproto/lexicon@^0.4.11",
+    "@types/react": "npm:@types/react@^19.1.6",
     "@wevm/vercel-og": "npm:@wevm/vercel-og@^0.6.12",
     "ai": "npm:ai@^4.3.16",
     "hono": "jsr:@hono/hono@^4.7.10",
     "multiformats": "npm:multiformats@^13.3.6",
-    "preact": "npm:preact@^10.26.8",
     "react": "npm:react@^19.1.0",
     "redis": "npm:redis@^5.1.1",
     "zod": "npm:zod@^3.25.32"
@@ -17,7 +17,5 @@
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
   }
 }
