--- a/deno.json
+++ b/deno.json
@@ -8,12 +8,13 @@
     "ai": "npm:ai@^4.3.16",
     "hono": "jsr:@hono/hono@^4.7.10",
     "multiformats": "npm:multiformats@^13.3.6",
+    "neverthrow": "npm:neverthrow@^8.0.0",
     "react": "npm:react@^19.1.0",
     "redis": "npm:redis@^5.1.1",
     "zod": "npm:zod@^3.25.32"
   },
   "tasks": {
-    "start": "deno run --allow-net src/index.ts"
+    "start": "deno run --allow-net --allow-env src/index.ts"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
